--- a/Projeto_Compilador.cbp
+++ b/Projeto_Compilador.cbp
@@ -31,9 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
+		<Unit filename="Analex.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Analex.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
