--- a/Projeto_Compilador.cbp
+++ b/Projeto_Compilador.cbp
@@ -35,6 +35,13 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Analex.h" />
+		<Unit filename="Anasint.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Anasint.h" />
+		<Unit filename="Main.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
